--- a/AmicumMobile/app/src/main/res/layout/splash_screen_fragment.xml
+++ b/AmicumMobile/app/src/main/res/layout/splash_screen_fragment.xml
@@ -1,12 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent" android:background="#FFFFFF">
 
-    <Button
-            android:text="SPLASH_SCREEN_BUTTON"
+    <EditText
+            android:layout_width="392dp"
+            android:layout_height="101dp"
+            android:inputType="textPersonName"
+            android:text="@string/splash_top_text"
+            tools:text="@string/splash_top_text"
+            android:ems="10"
+            android:id="@+id/lblTopSplash"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="@dimen/lblTopSplash" android:autofillHints=""/>
+    <EditText
+            android:layout_width="334dp"
+            android:layout_height="100dp"
+            android:inputType="textPersonName"
+            android:text='@string/splash_bottom_text'
+            android:ems="10"
+            android:id="@+id/editTextTextPersonName2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="@dimen/lblBottomSplash" android:autofillHints=""/>
+    <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/splash_logo"
+            android:id="@+id/imgLogoSplash"
+            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
+            app:layout_constraintTop_toBottomOf="@+id/lblTopSplash"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
