--- a/AmicumMobile/app/src/main/res/layout/autorization_fragment.xml
+++ b/AmicumMobile/app/src/main/res/layout/autorization_fragment.xml
@@ -3,12 +3,130 @@
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
-                                                   android:layout_height="match_parent" android:background="#FFFFFF">
+                                                   android:layout_height="match_parent"
+                                                   android:background="@color/autorization_background_color">
 
-    <Button
-            android:text="AUTORIZATION_BUTTON"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="32dp" android:layout_marginStart="24dp"
+            android:layout_marginBottom="32dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/fragment_rounded" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0">
+
+        <ImageView
+                android:layout_width="71dp"
+                android:layout_height="71dp"
+                app:srcCompat="@drawable/logo_small"
+                android:id="@+id/imageView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"/>
+        <com.google.android.material.button.MaterialButton
+                android:text="@string/btnCloseApplication"
+                android:layout_width="89dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnCloseApplication"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="25dp"
+                android:background="#FFFFFF"
+                style="@style/MaterialButtonStyle"
+                android:textColor="#EF7F1A"
+                android:fontFamily="@font/roboto_regular"/>
+        <com.google.android.material.textview.MaterialTextView
+                android:text="@string/lblEntryInSystem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lblEntryInSystem"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="124dp"
+                android:layout_marginStart="14dp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:fontFamily="@font/roboto_regular"/>
+        <com.google.android.material.textview.MaterialTextView
+                android:text="@string/lblWelcome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lblWelcome"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:fontFamily="@font/roboto_regular" app:layout_constraintTop_toBottomOf="@+id/lblEntryInSystem"
+                android:layout_marginTop="15dp"/>
+        <TextView
+                android:text="@string/lblLogin"
+                style="@style/LabelText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lblLogin"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="240dp"/>
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:inputType="textPersonName"
+                tools:text="MECHEL\IVANOVII"
+                android:hint="@string/hintLogin"
+                android:ems="10"
+                android:id="@+id/txtLogin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                style="@style/EditText"
+                android:autofillHints="" app:layout_constraintTop_toBottomOf="@+id/lblLogin"
+                android:layout_marginTop="10dp"/>
+        <TextView
+                android:text="@string/lblPwd"
+                style="@style/LabelText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lblPwd"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/txtLogin" android:layout_marginTop="20dp"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+
+                app:passwordToggleEnabled="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:inputType="textPassword"
+                tools:text="MECHEL\IVANOVII"
+                android:ems="10"
+                android:id="@+id/txtPwd"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:textSize="14sp"
+                style="@style/PwdText"
+                app:layout_constraintTop_toBottomOf="@+id/lblPwd"
+>
+            <com.google.android.material.textfield.TextInputEditText
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:hint="@string/hintPwd"
+                    android:inputType="textPassword"
+                    tools:text="Пароль"
+                    style="@style/PwdAttachText" android:textColorHighlight="#FFFFFF"
+                    android:textCursorDrawable="@color/black"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
