--- a/AmicumMobile/app/src/main/res/values/themes.xml
+++ b/AmicumMobile/app/src/main/res/values/themes.xml
@@ -1,16 +1,50 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AmicumMobile" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.AmicumMobile" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/white</item>
+        <item name="colorSecondaryVariant">@color/white</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="buttonBarButtonStyle">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="LabelText" parent="Theme.AmicumMobile">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">#B3B3B3</item>
+    </style>
+
+    <style name="EditText" parent="Theme.AmicumMobile">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">#B3B3B3</item>
+        <item name="android:background">@drawable/field_rounded</item>
+        <item name="boxStrokeColor">@color/black</item>
+        <item name="hintTextColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+
+    <style name="PwdText" parent="Theme.AmicumMobile">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">#B3B3B3</item>
+        <item name="android:textColorLink">#B3B3B3</item>
+        <item name="passwordToggleTint">#B3B3B3</item>
+        <item name="boxStrokeColor">@color/black</item>
+        <item name="hintTextColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:background">@drawable/field_with_attach</item>
+    </style>
+    <style name="PwdAttachText" parent="Theme.AmicumMobile">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">#B3B3B3</item>
+        <item name="android:textColorLink">#B3B3B3</item>
+        <item name="android:background">@drawable/field_with_attach_rounded</item>
+        <item name="android:textSize">14sp</item>
     </style>
 </resources>
