--- a/AmicumMobile/app/src/main/res/values/themes.xml
+++ b/AmicumMobile/app/src/main/res/values/themes.xml
@@ -32,6 +32,7 @@
 
     <style name="PwdText" parent="Theme.AmicumMobile">
         <item name="android:textColor">@color/black</item>
+        <item name="android:inputType">textPassword</item>
         <item name="android:textColorHint">#B3B3B3</item>
         <item name="android:textColorLink">#B3B3B3</item>
         <item name="passwordToggleTint">#B3B3B3</item>
@@ -46,5 +47,19 @@
         <item name="android:textColorLink">#B3B3B3</item>
         <item name="android:background">@drawable/field_with_attach_rounded</item>
         <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="CheckBox" parent="Theme.AmicumMobile">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:buttonTint">#999999</item>
+        <item name="android:textColorHint">#B3B3B3</item>
+    </style>
+
+    <style name="MaterialButtonStyleFill" parent="Theme.AmicumMobile">
+        <item name="backgroundTint">#598D9B</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:background">#598D9B</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:padding">0sp</item>
     </style>
 </resources>
