--- a/AmicumMobile/app/src/main/res/values/themes.xml
+++ b/AmicumMobile/app/src/main/res/values/themes.xml
@@ -19,12 +19,17 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">#B3B3B3</item>
     </style>
+    <style name="LabelMessageText" parent="Theme.AmicumMobile">
+        <item name="android:textColor">#B55A6E</item>
+        <item name="android:textColorHint">#B3B3B3</item>
+    </style>
 
     <style name="EditText" parent="Theme.AmicumMobile">
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">#B3B3B3</item>
         <item name="android:background">@drawable/field_rounded</item>
         <item name="boxStrokeColor">@color/black</item>
+        <item name="strokeWidth">1dp</item>
         <item name="hintTextColor">@color/black</item>
         <item name="android:textSize">14sp</item>
     </style>
@@ -37,6 +42,7 @@
         <item name="android:textColorLink">#B3B3B3</item>
         <item name="passwordToggleTint">#B3B3B3</item>
         <item name="boxStrokeColor">@color/black</item>
+        <item name="strokeWidth">1dp</item>
         <item name="hintTextColor">@color/black</item>
         <item name="android:textSize">14sp</item>
         <item name="android:background">@drawable/field_with_attach</item>
