--- a/app/src/main/res/layout/authorization_fragment.xml
+++ b/app/src/main/res/layout/authorization_fragment.xml
@@ -19,8 +19,8 @@
             android:layout_marginBottom="32dp"
             android:layout_marginEnd="24dp"
             android:background="@drawable/fragment_rounded"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="1.0">
 
         <ImageView
                 android:id="@+id/imageView"
@@ -61,84 +61,59 @@
                 android:text="@string/lblWelcome"
                 android:id="@+id/lblWelcome"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:fontFamily="@font/roboto_regular" app:layout_constraintTop_toBottomOf="@+id/lblEntryInSystem"
-                android:layout_marginTop="15dp"/>
-        <TextView
-                style="@style/LabelText"
-                android:id="@+id/lblLogin"
-                android:text="@string/lblLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="240dp"/>
-        <TextView
-                style="@style/LabelMessageText"
-                android:id="@+id/lblMessage"
-                tools:text="@string/emptyLogin"
-                android:layout_width="205dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="240dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp" android:gravity="end"/>
-
-        <EditText
-                style="@style/EditText"
-                android:id="@+id/txtLogin"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:inputType="textPersonName"
-                android:hint="@string/hintLogin"
-                android:ems="10"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:autofillHints="" app:layout_constraintTop_toBottomOf="@+id/lblLogin"
-                android:layout_marginTop="10dp"/>
-        <TextView
-                style="@style/LabelText"
-                android:id="@+id/lblPwd"
-                android:text="@string/lblPwd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/txtLogin" android:layout_marginTop="20dp"/>
+                android:layout_marginTop="15dp"
+        />
 
         <com.google.android.material.textfield.TextInputLayout
-                style="@style/PwdText"
+                style="@style/TextLayout"
+                android:id="@+id/layoutLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:hint="@string/hintLogin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/lblWelcome" android:layout_marginTop="24dp">
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtLogin"
+                    tools:text="sdfgsdfg"
+                    android:nextFocusDown="@id/layoutPwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1" android:lines="1" android:singleLine="true"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+                style="@style/TextLayout"
                 android:id="@+id/layoutPwd"
                 app:passwordToggleEnabled="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:hint=" "
-                android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@+id/lblPwd"
->
+                app:layout_constraintEnd_toEndOf="parent"
+                android:hint="@string/lblPwd"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/layoutLogin" android:layout_marginTop="24dp">
             <com.google.android.material.textfield.TextInputEditText
-                    style="@style/PwdAttachText"
                     android:id="@+id/txtPwd"
-                    android:textColorHighlight="#FFFFFF"
-                    android:layout_height="60dp"
-                    android:layout_width="match_parent"
-                    android:hint="@string/hintPwd"
+                    tools:text="sdfgsdfg"
+                    android:nextFocusDown="@id/btnLogin"
                     android:inputType="textPassword"
-                    tools:text="Пароль"
-                    android:textCursorDrawable="@color/black"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1" android:lines="1"/>
         </com.google.android.material.textfield.TextInputLayout>
+
+
         <com.google.android.material.checkbox.MaterialCheckBox
                 style="@style/CheckBox"
                 android:id="@+id/checkBox"
