--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,67 +1,48 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AmicumMobile" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="ThemeAmicumMobile" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/strokeColor</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/white</item>
-        <item name="colorOnSecondary">@color/white</item>
-        <item name="buttonBarButtonStyle">@color/white</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorAccent">@color/strokeColor</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="LabelText" parent="Theme.AmicumMobile">
+    <style name="LabelText" parent="ThemeAmicumMobile">
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">#B3B3B3</item>
     </style>
-    <style name="LabelMessageText" parent="Theme.AmicumMobile">
+    <style name="LabelMessageText" parent="ThemeAmicumMobile">
         <item name="android:textColor">#B55A6E</item>
         <item name="android:textColorHint">#B3B3B3</item>
     </style>
 
-    <style name="EditText" parent="Theme.AmicumMobile">
-        <item name="android:textColor">@color/black</item>
+    <style name="TextLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:textColorHint">#B3B3B3</item>
-        <item name="android:background">@drawable/field_rounded</item>
-        <item name="boxStrokeColor">@color/black</item>
-        <item name="strokeWidth">1dp</item>
-        <item name="hintTextColor">@color/black</item>
-        <item name="android:textSize">14sp</item>
+        <item name="hintTextColor">@color/strokeColor</item>
+        <item name="boxStrokeColor">@color/strokeColor</item>
+        <item name="boxStrokeErrorColor">@color/red</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlHighlight">@color/purple_700</item>
+        <item name="colorControlActivated">@color/strokeColor</item>
     </style>
 
-
-    <style name="PwdText" parent="Theme.AmicumMobile">
-        <item name="android:textColor">@color/black</item>
-        <item name="android:inputType">textPassword</item>
-        <item name="android:textColorHint">#B3B3B3</item>
-        <item name="android:textColorLink">#B3B3B3</item>
-        <item name="passwordToggleTint">#B3B3B3</item>
-        <item name="boxStrokeColor">@color/black</item>
-        <item name="strokeWidth">1dp</item>
-        <item name="hintTextColor">@color/black</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:background">@drawable/field_with_attach</item>
-    </style>
-    <style name="PwdAttachText" parent="Theme.AmicumMobile">
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textColorHint">#B3B3B3</item>
-        <item name="android:textColorLink">#B3B3B3</item>
-        <item name="android:background">@drawable/field_with_attach_rounded</item>
-        <item name="android:textSize">14sp</item>
-    </style>
-
-    <style name="CheckBox" parent="Theme.AmicumMobile">
+    <style name="CheckBox" parent="ThemeAmicumMobile">
         <item name="android:textColor">@color/black</item>
         <item name="android:buttonTint">#999999</item>
         <item name="android:textColorHint">#B3B3B3</item>
     </style>
 
-    <style name="MaterialButtonStyleFill" parent="Theme.AmicumMobile">
+    <style name="MaterialButtonStyleFill" parent="ThemeAmicumMobile">
         <item name="backgroundTint">#598D9B</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:background">#598D9B</item>
