--- a/app/src/main/res/layout/authorization_fragment.xml
+++ b/app/src/main/res/layout/authorization_fragment.xml
@@ -134,7 +134,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:fontFamily="@font/roboto_regular"
                 app:layout_constraintTop_toBottomOf="@+id/checkBox"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
