Перевел проект на AndroidStudio Выполнил верстку Главного бокового меню Удалены лишние компоненты из проекта

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="strokeColor">#598D9B</color>
+    <color name="actionModeBackground">#6A7180</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#B55A6E</color>
 </resources>
