--- a/app/src/main/res/layout/main_menu_fragment.xml
+++ b/app/src/main/res/layout/main_menu_fragment.xml
@@ -5,17 +5,59 @@
         android:layout_height="match_parent">
 
 
+
     <androidx.drawerlayout.widget.DrawerLayout
             android:id="@+id/drawerMainMenu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:openDrawer="start"
+
             android:fitsSystemWindows="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             <!-- Your contents -->
+
+            <com.google.android.material.appbar.AppBarLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                    <com.google.android.material.button.MaterialButton
+                            style="@style/MaterialButtonStyleAppBarTopBackground"
+                            android:layout_height="match_parent"
+                            android:drawableLeft="@drawable/icon_menu"
+                            android:id="@+id/materialButton"
+                            app:layout_constraintStart_toStartOf="parent" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:textSize="19sp"
+                            android:textColor="@color/white"
+                            android:text="Amicum mobile"
+                            app:layout_constraintEnd_toStartOf="@+id/materialButton2"
+                            app:layout_constraintStart_toEndOf="@+id/materialButton" />
+
+                    <com.google.android.material.button.MaterialButton
+                            style="@style/MaterialButtonStyleAppBarTopBackground"
+                            android:layout_height="match_parent"
+                            android:text="@null"
+                            android:drawableLeft="@drawable/icon_with_notification_white"
+                            android:id="@+id/materialButton2"
+                            app:layout_constraintEnd_toEndOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.appbar.AppBarLayout>
+
             <Button
                     android:text="OPEN_MAIN_MENU"
                     android:stateListAnimator="@null"
@@ -30,7 +72,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.navigation.NavigationView
-                android:id="@+id/navigation"
+                android:id="@+id/navigationMainMenu"
                 android:layout_width="300dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
