--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,7 @@
         <item name="textInputStyle">@style/TextLayout</item>
         <item name="materialButtonStyle">@style/MaterialButtonStyle</item>
         <item name="navigationViewStyle">@style/NavigationView</item>
+        <item name="appBarLayoutStyle">@style/AppBarLayout</item>
     </style>
 
     <style name="LabelText" parent="ThemeAmicumMobile">
@@ -55,9 +56,15 @@
         <item name="android:padding">0sp</item>
     </style>
 
-    <style name="MaterialButtonStyleNoBackground" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+    <style name="MaterialButtonStyleWhiteBackground" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="backgroundTint">@color/white</item>
         <item name="android:padding">0sp</item>
+    </style>
+
+    <style name="MaterialButtonStyleAppBarTopBackground" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="backgroundTint">@color/app_bar_layout</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_width">40dp</item>
     </style>
 
     <style name="MaterialButtonStyleMainMenu" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -76,6 +83,11 @@
     <style name="NavigationView" parent="Widget.MaterialComponents.NavigationView">
         <item name="android:layout_gravity">start</item>
         <item name="android:choiceMode">none</item>
+    </style>
+
+    <style name="AppBarLayout" parent="Widget.Design.AppBarLayout">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:background">@color/app_bar_layout</item>
     </style>
 
 
