Подключен компонент навигации, настроен граф Обновлены зависимости AppBarTop сделан универсальным, добавлены кнопки и иконки Главное меню вынесено в отдельный фрагммент

--- a/app/src/main/res/layout/app_bar_top_main_fragment.xml
+++ b/app/src/main/res/layout/app_bar_top_main_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -24,6 +23,13 @@
                     android:id="@+id/btnAppBarMainMenu"
                     app:layout_constraintStart_toStartOf="parent" />
 
+            <com.google.android.material.button.MaterialButton
+                    style="@style/MaterialButtonStyleAppBarTopBackground"
+                    android:layout_height="match_parent"
+                    android:drawableLeft="@drawable/icon_back_white"
+                    android:id="@+id/btnAppBarBack"
+                    app:layout_constraintStart_toStartOf="parent" />
+
             <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -41,6 +47,22 @@
                     android:text="@null"
                     android:drawableLeft="@drawable/icon_with_notification_white"
                     android:id="@+id/btnAppBarNotification"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            <com.google.android.material.button.MaterialButton
+                    style="@style/MaterialButtonStyleAppBarTopBackground"
+                    android:layout_height="match_parent"
+                    android:text="@null"
+                    android:drawableLeft="@drawable/icon_apply_white"
+                    android:id="@+id/btnAppBarApply"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            <com.google.android.material.button.MaterialButton
+                    style="@style/MaterialButtonStyleAppBarTopBackground"
+                    android:layout_height="match_parent"
+                    android:text="@null"
+                    android:drawableLeft="@drawable/icon_search_white"
+                    android:id="@+id/btnAppBarSearch"
                     app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
