--- a/app/src/main/res/layout/group_notification_fragment.xml
+++ b/app/src/main/res/layout/group_notification_fragment.xml
@@ -3,12 +3,20 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".GroupNotificationFragment">
+        tools:context=".MainActivity">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Групповые" />
+            android:text="Групповые"
+            android:gravity="end" />
+
+    <!--    Список уведомлений-->
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvGroupNotification"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/group_notification_item_fr" />
 
 </FrameLayout>
