в дочернем элементе списка уведомлений отключил нижнее подчеркивание

--- a/app/src/main/res/layout/notification_item_fragment.xml
+++ b/app/src/main/res/layout/notification_item_fragment.xml
@@ -63,6 +63,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
+            android:id="@+id/viewNotificationLine"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/NotificationLineDivision"
